# libstack

./: .gitignore  ChangeLog  README.md  configure.ac
docs/: api.md  c-license-header.h  coding-style.md  license-header.txt
include/: Makefile.am  stack.h
m4/: check_cflag.m4
src/: Makefile.am  stack.c  stack_create.c  stack_destroy.c  stack_diagnostics.c  stack_global.c  stack_internal.h  stack_peek.c  stack_pop.c  stack_push.c  stack_resize.c
tests/: test-array.c  test-constant.c  test-errors.c  test-push-pop.c  test-reent.c  test-warnings.c
