AM_CPPFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES = libstack.la
libstack_la_SOURCES = \
        stack_create.c \
        stack_destroy.c \
        stack_diagnostics.c \
        stack_global.c \
        stack_internal.h \
        stack_peek.c \
        stack_pop.c \
        stack_push.c \
        stack_resize.c
libstack_la_LDFLAGS = -version-number 1:0:0
